--- a/src/Selnet/TiendaOnlineBundle/Resources/views/Pages/index.html.twig
+++ b/src/Selnet/TiendaOnlineBundle/Resources/views/Pages/index.html.twig
@@ -1,113 +1,106 @@
-{% extends "SelnetTiendaOnlineBundle::template.html.twig" %}
-
-
-
-
-
-{% block contenido %}
+{% extends "SelnetTiendaOnlineBundle::template.html.twig" %} {% block contenido %}
 
 <div class="container">
-	<div class="row">
-		<div  id="left_content" class="col-md-2 same-col-1 ">
-			<div class="barra_spacer_2"></div>
-			<div class="barra_spacer_2"></div>
-			<div class="page-header pagina_header">
-				<h2  style="cursor:pointer;"  onclick="window.location='{{  path('artsenal_index') }}' " >Categorias</h2>
-			</div>
-			<div class="barra_border"></div>
-			<ul  class="lista_secciones" >
-				
-				{% for categoria in categorias %}
-				<li  class="texto_aquamarina" > 
-					<a class="texto_aquamarina" href="{{  path('artsenal_mostrar_categorias' , {id_categoria: categoria.id}) }}">
+    <div class="row">
+        <div id="left_content" class="col-md-2 same-col-1 ">
+            <div class="barra_spacer_2"></div>
+            <div class="barra_spacer_2"></div>
+            <div class="page-header pagina_header">
+                <h2 style="cursor:pointer;" onclick="window.location='{{  path('artsenal_index') }}' ">Categorias</h2>
+            </div>
+            <div class="barra_border"></div>
+            <ul class="lista_secciones">
+
+                {% for categoria in categorias %}
+                <li class="texto_aquamarina">
+                    <a class="texto_aquamarina" href="{{  path('artsenal_mostrar_categorias' , {id_categoria: categoria.id}) }}">
 						{{  categoria.nombre }}
 					</a> 
-				</li>
-				{% endfor %}
-			</ul>
+                </li>
+                {% endfor %}
+            </ul>
 
 
-			<div class="barra_spacer_2"></div>
-			<div class="page-header pagina_header">
-				<h2 style="cursor:pointer;"  onclick="window.location='{{  path('artsenal_index_tienda') }}' " >Tiendas</h2>
-			</div>
-			<div class="barra_border"></div>
-			<ul  class="lista_secciones" >
-				
-				{% for tienda in tiendas %}
-				<li  class="texto_aquamarina" > 
-					<a class="texto_aquamarina" href="{{  path('ver_tienda_artsenal' , {id_tienda: tienda.id }) }}" >
+            <div class="barra_spacer_2"></div>
+            <div class="page-header pagina_header">
+                <h2 style="cursor:pointer;" onclick="window.location='{{  path('artsenal_index_tienda') }}' ">Tiendas</h2>
+            </div>
+            <div class="barra_border"></div>
+            <ul class="lista_secciones">
+
+                {% for tienda in tiendas %}
+                <li class="texto_aquamarina">
+                    <a class="texto_aquamarina" href="{{  path('ver_tienda_artsenal' , {id_tienda: tienda.id }) }}">
 						{{  tienda.nombre }}
 					</a> 
-				</li>
-				{% endfor %}
-			</ul>
-		</div>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
 
 
 
-		<div id="content" class="col-md-10  same-col-1 ">
+        <div id="content" class="col-md-10  same-col-1 ">
 
-			<div class="row">
-				
-				<div class="col-md-9 col-md-offset-1">
-					
-					<div class="barra_spacer_3"></div>
-					<div class="barra_spacer_2"></div>
+            <div class="row">
 
-					<div class="panel panel-default panel-imagen-cabecera">
-						<div class="panel-body panel-imagen-container" 
-						style="background-image:url({{  asset(  'uploads/banners/' ~ banner.url    ) }}) ; padding:0px; margin:0px;" >
-					</div>
-				</div>
+                <div class="col-md-9 col-md-offset-1">
 
+                    <div class="barra_spacer_3"></div>
+                    <div class="barra_spacer_2"></div>
 
-
-
-				<div class="barra_spacer_2"></div>
-				<div class="page-header pagina_header">
-					<h2>Ultimas Artesanias</h2>
-				</div>
-
-
-				<div id="productos" class="productos" >
-
-					{% for row in productos| batch(4) %}
-
-					<div class="row producto_row" style="padding-top:20px;">
-
-						{% for producto in row %}
-
-						<div class="col-md-3"   style="padding-left: 5px; padding-right: 5px;" >
-							{% include 'SelnetTiendaOnlineBundle:Blocks:producto.preview.html.twig' with {'producto':  producto  } %}
-						</div>
-
-						{% endfor %}
-
-					</div>
-
-					{% endfor %}
-
-				</div>
+                    <div class="panel panel-default panel-imagen-cabecera">
+                        <div class="panel-body panel-imagen-container" style="background-image:url({{  asset(  'uploads/banners/' ~ banner.url    ) }}) ; padding:0px; margin:0px;">
+                        </div>
+                    </div>
 
 
 
 
-				<div class="barra_spacer_2"></div> 
+                    <div class="barra_spacer_2"></div>
+                    <div class="page-header pagina_header">
+                        <h2>Ultimas Artesanias</h2>
+                    </div>
 
 
-				
-			</div>
+                    <div id="productos" class="productos">
+
+                        {% for row in productos| batch(4) %}
+
+                        <div class="row producto_row" style="padding-top:20px;">
+
+                            {% for producto in row %}
+
+                            <div class="col-md-3" style="padding-left: 5px; padding-right: 5px;">
+                                {% include 'SelnetTiendaOnlineBundle:Blocks:producto.preview.html.twig' with {'producto': producto } %}
+                            </div>
+
+                            {% endfor %}
+
+                        </div>
+
+                        {% endfor %}
+
+                    </div>
 
 
 
 
-		</div>
-	</div>
+                    <div class="barra_spacer_2"></div>
 
 
 
-</div>
+                </div>
+
+
+
+
+            </div>
+        </div>
+
+
+
+    </div>
 </div>
 
 
