--- a/src/Setnet/ArtsenalBundle/Resources/views/Templates/template.footer.html.twig
+++ b/src/Setnet/ArtsenalBundle/Resources/views/Templates/template.footer.html.twig
@@ -58,7 +58,7 @@
 
             <div class="row" style="background-color: white;" >
                 <div class="span6 offset5" >
-                    <p  class="precioProducto" style="color: #cc3399;margin-bottom: 0px;" >Artsenal todos los derechos reservados</p>
+                    <p  class="precioProducto" style="color: #cc3399;margin-bottom: 0px;" >&copy; 2014 Artsenal. Todos los derechos reservados</p>
                 </div>
             </div>
 
