--- a/src/Selnet/TiendaOnlineBundle/Resources/views/Blocks/footer.html.twig
+++ b/src/Selnet/TiendaOnlineBundle/Resources/views/Blocks/footer.html.twig
@@ -36,7 +36,7 @@
 
 
 					<div class="col-md-12">
-						<p  class="texto_rosa" style="text-align:center;font-weight:bold;" >Artsenal Todos los derechos reservados</p>
+						<p  class="texto_rosa" style="text-align:center;font-weight:bold;" >&copy; 2014 Artsenal. Todos los derechos reservados.</p>
 					</div>
 
 
