--- a/src/Selnet/TiendaOnlineBundle/Resources/views/Menu/default.submenu.html.twig
+++ b/src/Selnet/TiendaOnlineBundle/Resources/views/Menu/default.submenu.html.twig
@@ -25,9 +25,13 @@
 
 					<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
+							<i class="icon-search search-submit"></i>
 							<input id="search_input" type="text" class="form-control" placeholder="Escriba el nombre del producto que buscas">
+
+
 						</div>
 					</form>
+
 				</li>
 
 
