--- a/src/App/ShopThemeBundle/Resources/views/template.artsenal.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/template.artsenal.html.twig
@@ -47,7 +47,7 @@
 
 
 <!-- Page Content -->
-<div class="{{  modo_layout }}   ">
+<div class="{{  modo_layout }}"  style="padding-left:70px; padding-right:70px" >
 
   <div class="row table-row ">
 
@@ -69,11 +69,10 @@
 
 {% block footer %}
 
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"  style="padding-left: 0px; padding-right: 0px;" >
    {% include 'AppShopThemeBundle:Blocks:footer.html.twig'  %}
 </div>
 
-    
 {% endblock %}
 
 
@@ -84,9 +83,6 @@
 </div>
 
 </div>
-<!-- /.container -->
-
-<!-- /.container -->
 
 
 
