--- a/src/Selnet/TiendaOnlineBundle/Resources/views/template.html.twig
+++ b/src/Selnet/TiendaOnlineBundle/Resources/views/template.html.twig
@@ -8,6 +8,7 @@
 	{% stylesheets 
 	'@SelnetTiendaOnlineBundle/Resources/public/css/bootstrap.min.css' 
 	'@SelnetTiendaOnlineBundle/Resources/public/css/style.css' 
+	'@SelnetTiendaOnlineBundle/Resources/public/css/artsenal.css' 
 	filter='cssrewrite' %}
 	<link rel="stylesheet" href="{{ asset_url }}" />
 	{% endstylesheets %}
