--- a/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
@@ -121,6 +121,9 @@
 
     <div class="col-sm-2 col-lg-2 col-md-2  vertical-center submenu-item submenu-cesta " >
       <a href="{{ path('ver_cesta_artsenal') }}">Mi cesta</a>
+      {% image '@AppShopThemeBundle/Resources/public/images/icon_cesta.png'%}
+        <img  style="display: inline; margin-top: -12px;"  class="img-responsive" src="{{ asset_url }}" alt="artsenal"/>
+      {% endimage %}
     </div>
 
   </div>
