--- a/src/App/ShopThemeBundle/Resources/views/Tienda/crear.nombre.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Tienda/crear.nombre.html.twig
@@ -25,8 +25,7 @@
 
 <div class="row">
 	<div class="col-md-10 col-md-offset-1">
-		<div class="panel panel-default artsenal-panel "  style="margin-bottom: 0px; border-bottom-width: 0px;" >
-			<div class="panel-body"></div>
+		<div class="panel panel-default artsenal-panel artsenal-panel-tab"  style="margin-bottom: 0px; border-bottom-width: 0px;" >
 			<div class="container-fluid">
 				<div class="row">
 
