--- a/src/App/ShopThemeBundle/Resources/views/template.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/template.html.twig
@@ -19,6 +19,7 @@
 	'bundles/appshoptheme/css/bootstrap.min.css' 
   'bundles/appshoptheme/css/shop-homepage.css' 
   'bundles/appshoptheme/css/estilo.css' 
+  'bundles/appshoptheme/css/artsenal.css' 
   filter='cssrewrite' %}
   <link rel="stylesheet" href="{{ asset_url }}" />
   {% endstylesheets %}
@@ -47,7 +48,7 @@
 
 
   <!-- Page Content -->
-  <div class="{{  modo_layout }}   table-container">
+  <div class="{{  modo_layout }}   table-container"  style="padding-left: 0px; padding-right: 0px;"  >
 
     <div class="row table-row ">
 
@@ -55,7 +56,7 @@
 
 
       <!-- contenido de banner  -->
-      <div class="col-sm-1 col-lg-1 col-md-1 table-col col-banner"  >
+      <div class="col-sm-1 col-lg-1 col-md-1 table-col col-banner"   style="padding-top:45px;"  >
        {{ render(controller('AppShopThemeBundle:Default:getPublicidad')) }}
      </div>
 
@@ -65,7 +66,7 @@
      <!-- contenido de la pagina -->
 
 
-     <div class="col-sm-10 col-lg-10 col-md-10 table-col "  >
+     <div class="col-sm-10 col-lg-10 col-md-10 table-col " style="padding-top:45px;" >
 
       {% block contenido %}
       
@@ -76,14 +77,20 @@
 
       <div class="col-sm-2 col-lg-2 col-md-2"  >
 
-      {{ render(controller('AppShopThemeBundle:Default:getCategorias')) }}
+        {{ render(controller('AppShopThemeBundle:Default:getCategorias')) }}
+
+
+        {{ render(controller('AppShopThemeBundle:Default:getPublicidadBlock')) }}
+
+
+
 
       </div>
 
 
 
 
-      <div class="col-md-10"   >
+      <div class="col-md-10" style=" border-left: 1px solid  #eeeeee;padding-left:45px;"  >
 
 
         {% block banners %}
@@ -97,51 +104,58 @@
 
 
 
-    <div class="row">
-      <div class="col-sm-12 col-lg-12 col-md-12  ">
+        <div class="row">
+          <div class="col-sm-12 col-lg-12 col-md-12  ">
 
-        {% block titulo_contenido %}
-        <h3 class="latto">Ultimas Artesanias</h3>    
-        {% endblock %}
+            {% block titulo_contenido %}
+            <h3 class="latto">Ultimas Artesanias</h3>    
+            {% endblock %}
+
+          </div>
+        </div>
+
+        <div class="row">
+
+
+          {% block productos %}
+
+          {% for producto in productos %}
+          {% include 'AppShopThemeBundle:Blocks:producto.html.twig' with {'producto': producto }   %}
+          {% endfor %}
+
+          {% endblock %}
+
+        </div>
+
+
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
 
       </div>
-    </div>
-
-    <div class="row">
 
 
-{% block productos %}
-
-      {% for producto in productos %}
-      {% include 'AppShopThemeBundle:Blocks:producto.html.twig' with {'producto': producto }   %}
-      {% endfor %}
-
-{% endblock %}
-
-    </div>
+      {% endblock %}
 
 
+      {% block footer %}
 
 
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"  style="padding-left: 0px; padding-right: 0px;" >
+       {% include 'AppShopThemeBundle:Blocks:footer.html.twig'  %}
+     </div>
+     {% endblock %}
+
+   </div>
+
+   <div class="col-sm-1 col-lg-1 col-md-1  table-col col-banner"    style="padding-top:45px;"  >
+    {{ render(controller('AppShopThemeBundle:Default:getPublicidad')) }}
   </div>
-
-
-  {% endblock %}
-
-
-  {% block footer %}
-
-
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-   {% include 'AppShopThemeBundle:Blocks:footer.html.twig'  %}
- </div>
- {% endblock %}
-
-</div>
-
-<div class="col-sm-1 col-lg-1 col-md-1  table-col col-banner">
-  {{ render(controller('AppShopThemeBundle:Default:getPublicidad')) }}
-</div>
 
 </div>
 
@@ -151,10 +165,10 @@
 
 
 {% block modal %}
-    
 
 
-    
+
+
 {% endblock %}
 
 
