--- a/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
@@ -37,7 +37,7 @@
     <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tu Cuenta </a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Compras</a></li>
+                <li><a href="{{  path('ver_compras_usuario') }}">Compras</a></li>
                 <li><a href="{{  path('perfil_usuario') }}">Perfil</a></li>
                 <li><a href="#">Configuracion</a></li>
                 <li><a href="{{  path('salir') }}">Salir</a></li>                
