--- a/src/App/ShopThemeBundle/Resources/public/css/artsenal.css
+++ b/src/App/ShopThemeBundle/Resources/public/css/artsenal.css
@@ -12,7 +12,7 @@ html,body {height:100%;}
 
 #main{
 	padding-left: 0;
-    padding-right: 0;
+	padding-right: 0;
 }
 
 
@@ -408,7 +408,7 @@ input{
  	box-shadow:         0px 2px 10px 2px #cccccc;
  	
  }
-*/
+ */
 
 
  .producto_imagen{
@@ -548,69 +548,93 @@ input{
 
 
 
-/*formulario*/
+ /*formulario*/
 
-.form-control-radio{
-	border:0px solid black;
-	box-shadow: none;
-	padding-left: 0px;
-}
+ .form-control-radio{
+ 	border:0px solid black;
+ 	box-shadow: none;
+ 	padding-left: 0px;
+ }
 
-.form-control-radio label {
-	padding-right: 20px;
-	padding-left: 4px;
-	color: gray;
-	font-weight: normal;
-	font-family: "Helvetica Neue",​Helvetica,​Arial,​sans-serif;
-}
-
-
-
-
-
-.facebook-register-box{
-	background-color: #fffde6;
-	padding-top: 15px; padding-bottom: 15px;
-	border-left:  1px solid #eeecd5;
-	border-right:  1px solid #eeecd5;
-	padding-left: 30px;
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-
-.btn_facebook{
-	background-image: url('../images/facebook_login.png');
-	height: 27px;
-	width: 205px;
-
-}
-
-.text_registro{
-	 font-family: lato_light;
-	 padding-left: 20px;
-}
-
-.terminos_condiciones_link{
-	color: rgb(19, 140, 140);
-	font-weight: bold;
-}
-
-.subnavbar-artsenal{
-	margin-bottom: 2px;
-}
+ .form-control-radio label {
+ 	padding-right: 20px;
+ 	padding-left: 4px;
+ 	color: gray;
+ 	font-weight: normal;
+ 	font-family: "Helvetica Neue",​Helvetica,​Arial,​sans-serif;
+ }
 
 
 
 
-p.titulo_lista_compras{
-	color: #666666;
-	font-family: lato_light;
-}
+
+ .facebook-register-box{
+ 	background-color: #fffde6;
+ 	padding-top: 15px; padding-bottom: 15px;
+ 	border-left:  1px solid #eeecd5;
+ 	border-right:  1px solid #eeecd5;
+ 	padding-left: 30px;
+ 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+ }
+
+ .btn_facebook{
+ 	background-image: url('../images/facebook_login.png');
+ 	height: 27px;
+ 	width: 205px;
+
+ }
+
+ .text_registro{
+ 	font-family: lato_light;
+ 	padding-left: 20px;
+ }
+
+ .terminos_condiciones_link{
+ 	color: rgb(19, 140, 140);
+ 	font-weight: bold;
+ }
+
+ .subnavbar-artsenal{
+ 	margin-bottom: 2px;
+ }
 
 
-.text_lista_compras{
-	font-weight: bold;
-}
-.lista_compra div p {text-align: center;}
+ .aquamarina{
+ 	color: #138c8c
+ }
+
+ .rosa{
+ 	color: #b4328c;
+ }
+
+ p.titulo_lista_compras{
+ 	color: #666666;
+ 	font-family: lato_light;
+ 	font-size: 18px;
+ }
+
+
+ .text_lista_compras{
+ 	padding-top: 15px;
+ 	font-weight: bold;
+ }
+ .lista_compra div p {text-align: center;}
 
  
+ .titulo_lista_compras{
+ 	color: red;
+ }
+
+
+
+ .tienda_block{
+ 	background-color: white;
+ 	margin-top: 40px;
+
+ 	-webkit-box-shadow: 2px 2px 4px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    2px 2px 4px 0px rgba(50, 50, 50, 0.75);
+	box-shadow:         2px 2px 4px 0px rgba(50, 50, 50, 0.75);
+	margin-bottom: 10px;
+ }
+
 
