--- a/src/App/ShopThemeBundle/Resources/views/Modal/producto.detalle.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Modal/producto.detalle.html.twig
@@ -74,7 +74,7 @@
 							</div>	
 
 							<div class="col-sm-6">
-								<button type="submit" class="btn-agregar-cesta  btn btn-default pull-right btn_aquamarino"  
+								<button type="submit" class="  btn btn-default pull-right btn_aquamarino"  
 								onclick="addtoCart('{{  path('agregar_producto_cart' , {'id_producto': producto.id , 'cantidad': 1 , 'precio':producto.precio}) }}')" >Agregar en mi cesta</button>
 							</div>	
 						</div>
