--- a/src/App/ShopThemeBundle/Resources/views/template.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/template.html.twig
@@ -56,7 +56,7 @@
 
 
       <!-- contenido de banner  -->
-      <div class="col-sm-1 col-lg-1 col-md-1 table-col col-banner"   style="padding-top:45px;"  >
+      <div class="col-sm-1 col-lg-1 col-md-1 table-col col-banner"     >
        {{ render(controller('AppShopThemeBundle:Default:getPublicidad')) }}
      </div>
 
@@ -66,7 +66,7 @@
      <!-- contenido de la pagina -->
 
 
-     <div class="col-sm-10 col-lg-10 col-md-10 table-col " style="padding-top:45px;" >
+     <div class="col-sm-10 col-lg-10 col-md-10 table-col " style="padding-top:45px;   {% block container_div_style %}{% endblock %}" >
 
       {% block contenido %}
       
