--- a/src/App/ShopThemeBundle/Resources/views/Tienda/ver.tienda.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Tienda/ver.tienda.html.twig
@@ -23,7 +23,7 @@
 	<div class="barra_border"></div>
 	
 	<div   id="categoria_block" class="list-group">
-		<a href="#" class="list-group-item"> {{ tienda.usuario }}</a> 
+		<a href="#" class="list-group-item"> {{ app.user.username }}</a> 
 	</div>
 
 	<hr>
