--- a/src/App/ShopThemeBundle/Resources/views/Default/index.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Default/index.html.twig
@@ -5,15 +5,11 @@
 {% block modal %}
 
 
-
-
-
 <div id="modalProducto" class="modal fade">
 
 
 
-
-	</div><!-- /.modal -->
+</div>
 
 
 {% endblock %}
