--- a/src/App/ShopThemeBundle/Resources/views/Paginas/registar.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Paginas/registar.html.twig
@@ -62,6 +62,12 @@
     	</div>
     </div>
 
+{% for flashMessage in app.session.flashbag.get('mensaje_correo') %}
+    <div class="flash-notice">
+        {{ flashMessage }}
+    </div>
+{% endfor %}
+
 
 
     <div class="row">
@@ -108,9 +114,8 @@
 
     					<div class="row">
     						<div  class="col-md-5 " >
-    							<form class="form-horizontal" role="form">
     								{{ form_errors(form) }}
-    							</form>
+
     						</div>
     					</div>
 
@@ -153,13 +158,21 @@
     								<div class="form-group">
     									<label for="inputEmail3" class="col-sm-2 control-label label_gris">Correo</label>
     									<div class="col-sm-8 col-sm-offset-2">
-    										{{  form_widget(  form.email , {attr:{  'class':'form-control' , 'placeholder':'' }} ) }}
+                                            {{  form_widget(  form.email , {attr:{  'class':'form-control' , 'placeholder':'' }} ) }}
+                                            
+                                                                                        <div class="form-control-error">
+                                            {{  form_errors(  form.email , {attr:{  'class':'form-control form-control-error' , 'placeholder':'' }} ) }}
+                                            </div>
+    										
     									</div>
     								</div>
     								<div class="form-group">
     									<label for="inputPassword3" class="col-sm-2 control-label label_gris">Usuario</label>
     									<div class="col-sm-8 col-sm-offset-2">
-    										{{  form_widget(  form.username , {attr:{  'class':'form-control' , 'placeholder':' ' }} ) }}
+                                            {{  form_widget(  form.username , {attr:{  'class':'form-control' , 'placeholder':' ' }} ) }}
+                                            <div class="form-control-error">
+    										{{  form_errors(  form.username , {attr:{  'class':'form-control form-control-error' , 'placeholder':'' }} ) }}
+                                            </div>
     									</div>
     								</div>
 
